# api-rust

./: .env  .gitignore  Cargo.toml  db.sqlite.bak_2026-03-16_164917
src/: main.rs  main.rs.save  main.rs.save.1  main.rs.save.2  main.rsy
static/images/Tecno_Spark_go_2024/: silicona_corolores.co
static/images/reno_10/: silicona_rojo.avif
