[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
axum-macros = "0.3.0"

